--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Document</title>
 </head>
 
-<body>
-    <div class="bkgrnd">
+<body class="bkgrnd">
+    <div >
         
         <nav class="navi">
             <img src="NewLogo.png" class ="logo"
@@ -34,7 +34,7 @@
             We have a variety of specialist BMW specific workshop and diagnostic tools enabling us to provide a dealership level service. Established in 2015,
              our team comprises of former dealership techs and experienced individuals with at least 10 years experience each in the bmw automotive industry.
         </p>
-        
+
     </div>
 </body>
 </html>
