--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Contact us</title>
 </head>
-<body>
-    <div class="bkgrnd3">
+<body class="bkgrnd3">
+    <div >
         <nav class = "navi">
             <img src="NewLogo.png" class ="logo"
         >
