--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,9 @@
 
         <h1>Useful Links:</h1>
         <div class="links">
-            <a href="https:/realoem.com"> Realoem BMW Parts Catalogue</a>
+            <a href="https://realoem.com"> Realoem BMW Parts Catalogue</a>
             <p>Search the specification / parts for your car using your VIN number</p>
-            <a href="https:/www.gov.uk/check-mot-history">MOT Checker</a>
+            <a href="https://www.gov.uk/check-mot-history">MOT Checker</a>
             <p>Check the MOT history / renewal date for your vehicle</p>
         </div>
     </div>
